--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Todo</title>
@@ -41,7 +42,6 @@
                 <h3>List of todo's</h3>
               </div>
               <div class="panel-body" class="listOfTodos" id="todoList">
-
               </div>
               <div class="buttons">
                 <button class="clearButton btn-info" id="ButtonClear"> 
